Fix editor toolbar overlap with workspace

--- a/theme/common.less
+++ b/theme/common.less
@@ -1096,6 +1096,12 @@ p.ui.font.small {
     .hideEditorFloats #editortools {
         height: @editorToolsCollapsedHeight;
     }
+    .hideEditorFloats #editortools > div > div > .ui.grid {
+        margin: auto;
+    }
+    .hideEditorFloats #editorToolbarArea {
+        padding-top: 0;
+    }
     .hideEditorFloats #blocksArea, .hideEditorFloats #monacoEditor, .hideEditorFloats #msg {
         bottom: @editorToolsCollapsedHeight;
     }
